Updated game logo, fixed clear icon not showing for reqs in opportunity modal if player lacks level(s).

--- a/client/src/app/game/card/card.component.scss
+++ b/client/src/app/game/card/card.component.scss
@@ -141,12 +141,6 @@
 		}
 	}
 
-	.buttons {
-		.effect {
-
-		}
-	}
-
 	#back {
 	  
 	  @include transition(all, 150ms, cubic-bezier(0.64, 0.57, 0.67, 1.53));
